<resources>
    <string name="app_name">Just Java</string>
    <string name = "EnterYourName">Enter Your Name</string>
    <string name = "toppings">Toppings</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="orderSummary">Order Summary</string>
    <string name="Rs">Rs</string>
    <string name="order">Order</string>
    <string name="name">name</string>
    <string name="add">add</string>
    <string name="whipped">whipped</string>
    <string name="cream">cream</string>
</resources>