<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16sp"
            android:layout_marginTop="16sp"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EnterYourName"
                android:inputType="textMultiLine" />

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/toppings" />


            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/whippedCream"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/chocolate"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="16sp" />


            <TextView
                style="@style/HeaderTextStyle"
                android:paddingBottom="8sp"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8sp">

                <Button
                    android:id="@+id/decrement"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrement"
                    android:paddingRight="8sp"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingHorizontal="16sp"
                    android:text="0"
                    android:textSize="16sp" />


                <Button
                    android:id="@+id/increment"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:paddingLeft="8sp"
                    android:text="+" />

            </LinearLayout>


            <TextView
                android:id="@+id/showMessage"
                style="@style/HeaderTextStyle"
                android:paddingBottom="8sp"
                android:text="@string/orderSummary" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="Rs. 0"
                android:textSize="16sp" />


            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitOrder"
                android:padding="8sp"
                android:text="@string/order" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>